# https-server

./: CMakeLists.txt  README.md
.cache/clangd/index/: client.c.60F2F0F8AFAEB9E2.idx  client.h.D83FFF377DCDC066.idx  server.c.71D2F7EF18B4DE27.idx  server.c.BDA5E7FFA0CF6380.idx  urlParse.c.71B3B7CB0BE5D5D9.idx  urlParse.c.D0F83A05885203E7.idx  urlParse.h.2D626C62EF7531B1.idx  urlParse.h.F256949E8CA93812.idx
include/: client.h  create-respons.h  create_respons.h  file_manager.h  parser.h  urlParse.h
src/: client.c  create-respons.c  create_respons.c  file_manager.c  parser.c  server.c  urlParse.c
